# Iris

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  RenderConstantRedSphere.pfm  WORKSPACE  iris-test.psess  iris-test140612.vspx  todo.txt
iris/: BUILD  CMakeLists.txt  full_hit_context.h  hit.h  hit_allocator.c  hit_allocator.h  hit_allocator_internal.h  hit_allocator_test.cc  hit_context.h  hit_internal.h  hit_tester.c  hit_tester.h  hit_tester_internal.h  hit_tester_test.cc  iris.h  matrix.c  matrix.h  matrix_internal.h  matrix_test.cc  multiply.c  multiply.h  multiply_internal.h  multiply_internal_test.cc  multiply_test.cc  point.h  point_test.cc  ray.h  ray_test.cc  ray_tracer.c  ray_tracer.h  ray_tracer_test.cc  sal.h  shared_hit_context.h  shared_hit_context_allocator.h  shared_hit_context_allocator_test.cc  status.h  vector.h  vector_test.cc
iris/inc/: iris.h  iris_annotations.h  iris_assert.h  iris_error.h  iris_free.h  iris_geometry.h  iris_geometryhit.h  iris_geometrytracer.h  iris_hitallocator.h  iris_hittester.h  iris_limits.h  iris_limits_others.h  iris_limits_windows.h  iris_malloc.h  iris_math.h  iris_matrix.h  iris_matrixreference.h  iris_object.h  iris_point.h  iris_ray.h  iris_raytracer.h  iris_raytracerowner.h  iris_raytracerreference.h  iris_sal.h  iris_scene.h  iris_sceneobject.h  iris_sceneobjecttracer.h  iris_shape.h  iris_shapehit.h  iris_shapehitallocator.h  iris_shapehitcollection.h  iris_shapehitlist.h  iris_shapereference.h  iris_types.h  iris_types_others.h  iris_types_windows.h  iris_vector.h
iris/src/: CMakeLists.txt  geometry.c  geometryhit.c  hitallocator.c  hittester.c  malloc.c  matrix.c  matrixreference.c  point.c  ray.c  raytracer.c  scene.c  sceneobjecttracer.c  shape.c  shapehitallocator.c  shapereference.c  vector.c
irisadvanced/: CMakeLists.txt
irisadvanced/inc/: irisadvanced.h  irisadvanced_advancedshape.h  irisadvanced_api.h  irisadvanced_boundedshape.h  irisadvanced_boundingbox.h  irisadvanced_color3.h  irisadvanced_framebuffer.h  irisadvanced_math.h  irisadvanced_normal.h  irisadvanced_random.h  irisadvanced_randomallocator.h  irisadvanced_randomgenerator.h  irisadvanced_randomreference.h  irisadvanced_rng.h  irisadvanced_rngowner.h  irisadvanced_scene.h  irisadvanced_shape.h  irisadvanced_visibilitytester.h  irisadvanced_visibilitytesterowner.h
irisadvanced/src/: advancedshape.c  boundedshape.c  framebuffer.c  math.c  normal.c  random.c  randomallocator.c  randomgenerator.c  randomreference.c  scene.c  visibilitytester.c
irisadvancedplusplus/: CMakeLists.txt
irisadvancedplusplus/inc/: irisadvancedplusplus.h  irisadvancedplusplus_api.h  irisadvancedplusplus_color3.h  irisadvancedplusplus_framebuffer.h  irisadvancedplusplus_random.h  irisadvancedplusplus_randomallocator.h  irisadvancedplusplus_randombase.h  irisadvancedplusplus_randomgenerator.h  irisadvancedplusplus_randomreference.h
irisadvancedplusplus/src/: random.cpp  randombase.cpp  randomgenerator.cpp  randomreference.cpp
irisadvancedtoolkit/: CMakeLists.txt
irisadvancedtoolkit/inc/: irisadvancedtoolkit.h  irisadvancedtoolkit_framebuffer.h  irisadvancedtoolkit_math.h  irisadvancedtoolkit_mwc.h  irisadvancedtoolkit_mwcgenerator.h
irisadvancedtoolkit/src/: framebuffer.c  math.c  mwc.c
iriscamera/: CMakeLists.txt
iriscamera/inc/: iriscamera.h  iriscamera_camera.h  iriscamera_framebuffer.h  iriscamera_pixelsampler.h  iriscamera_randomgenerator.h  iriscamera_raygenerator.h  iriscamera_raytracer.h  iriscamera_render.h  iriscamera_sampletracer.h  iriscamera_sampletracerallocator.h  iriscamera_sampletracercallback.h  iriscamera_sampletracergenerator.h
iriscamera/src/: camera.c  framebuffer.c  pixelsampler.c  randomgenerator.c  raygenerator.c  raytracer.c  render.c  sampletracer.c  sampletracerallocator.c  sampletracercallback.c  sampletracergenerator.c
iriscameraplusplus/: CMakeLists.txt
iriscameraplusplus/inc/: iriscameraplusplus.h  iriscameraplusplus_camera.h  iriscameraplusplus_framebuffer.h  iriscameraplusplus_pixelsampler.h  iriscameraplusplus_randomgenerator.h  iriscameraplusplus_render.h  iriscameraplusplus_sampletracer.h  iriscameraplusplus_sampletracerallocator.h  iriscameraplusplus_sampletracerbase.h  iriscameraplusplus_sampletracergenerator.h  iriscameraplusplus_sampletracergeneratorbase.h
iriscameraplusplus/src/: framebuffer.cpp  sampletracerbase.cpp  sampletracergeneratorbase.cpp
iriscameratoolkit/: CMakeLists.txt
iriscameratoolkit/inc/: iriscameratoolkit.h  iriscameratoolkit_gridpixelsampler.h  iriscameratoolkit_mwcgenerator.h  iriscameratoolkit_pinhole.h
iriscameratoolkit/src/: gridpixelsampler.c  mwcgenerator.c  pinhole.c
irisphysx/: CMakeLists.txt  irisphysxp.h
irisphysx/inc/: irisphysx.h  irisphysx_arealight.h  irisphysx_arealightbuilder.h  irisphysx_brdf.h  irisphysx_brdfallocator.h  irisphysx_direct.h  irisphysx_emissive.h  irisphysx_geometry.h  irisphysx_hitallocator.h  irisphysx_hittester.h  irisphysx_indirect.h  irisphysx_integrator.h  irisphysx_light.h  irisphysx_lightedgeometry.h  irisphysx_lightlist.h  irisphysx_material.h  irisphysx_raytracer.h  irisphysx_reflector.h  irisphysx_scene.h  irisphysx_shader.h  irisphysx_shape.h  irisphysx_spectrum.h  irisphysx_spectrumcompositor.h  irisphysx_texture.h  irisphysx_visibilitytester.h
irisphysx/src/: arealightadapter.c  arealightbuilder.c  arealightreferencecount.c  brdf.c  brdfallocator.c  direct.c  emissive.c  geometry.c  hitallocator.c  hittester.c  indirect.c  integrator.c  light.c  lightedgeometry.c  lightedgeometryadapter.c  lightlist.c  material.c  raytracer.c  raytraceradapter.c  scene.c  (+7 more)
irisphysxplusplus/: CMakeLists.txt
irisphysxtoolkit/: CMakeLists.txt
irisphysxtoolkitplusplus/: CMakeLists.txt
irisplusplus/: CMakeLists.txt
irisrandom/: CMakeLists.txt
irisrandomtoolkit/: CMakeLists.txt
irisrgb/: CMakeLists.txt
irisshadingmodel/: CMakeLists.txt
irisspectrum/: CMakeLists.txt
irisspectrumplusplus/: CMakeLists.txt
iristoolkit/: CMakeLists.txt
test/: BUILD  CMakeLists.txt  empty_physx.cc  single_sphere.cc  spectra.c  spectra.h  test_util.h
(+961 files in other folders)
