cmake_minimum_required (VERSION 3.2) 
project (iris)

set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin) 

set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(iris)
add_subdirectory(irisadvanced)
add_subdirectory(irisspectrum)
add_subdirectory(irisphysx)
add_subdirectory(irisshadingmodel)
add_subdirectory(iristoolkit)
add_subdirectory(irisadvancedtoolkit)
add_subdirectory(irisphysxtoolkit)
add_subdirectory(irisplusplus)
add_subdirectory(irisadvancedplusplus)
add_subdirectory(irisspectrumplusplus)
add_subdirectory(irisphysxplusplus)
add_subdirectory(irisphysxtoolkitplusplus)
add_subdirectory(test)