include_directories(src/inc
    ${PROJECT_BINARY_DIR}/inc
    ../iris/inc 
    ../irisadvanced/inc 
    ../iriscamera/inc 
    ../irisspectrum/inc 
    ../irisphysx/inc 
    ../irisadvancedtoolkit/inc 
    ../iriscameratoolkit/inc 
    ../irisphysxtoolkit/inc 
    ../irisplusplus/inc
    ../irisadvancedplusplus/inc
    ../iriscameraplusplus/inc
    ../irisspectrumplusplus/inc
    ../irisphysxplusplus/inc
    ../irisadvancedtoolkitplusplus/inc
    ../iriscameratoolkitplusplus/inc 
    ../irisphysxtoolkitplusplus/inc
    ../iriscommon
    unittest++)

set(unittest-common-sources
    unittest++/AssertException.cpp
    unittest++/Checks.cpp
    unittest++/CurrentTest.cpp
    unittest++/DeferredTestReporter.cpp
    unittest++/DeferredTestResult.cpp
    unittest++/MemoryOutStream.cpp
    unittest++/ReportAssert.cpp
    unittest++/Test.cpp
    unittest++/TestDetails.cpp
    unittest++/TestList.cpp
    unittest++/TestReporter.cpp
    unittest++/TestReporterStdout.cpp
    unittest++/TestResults.cpp
    unittest++/TestRunner.cpp
    unittest++/TimeConstraint.cpp
    unittest++/XmlTestReporter.cpp)

if(WIN32)
    set(unittest-platform-sources
        unittest++/win32/TimeHelpers.cpp)
ELSE()
    set(unittest-platform-sources 
        unittest++/posix/SignalTranslator.cpp
        unittest++/posix/TimeHelpers.cpp)
ENDIF(WIN32)

add_executable(iris-test
    ${unittest-common-sources}
    ${unittest-platform-sources}
    src/main.cpp
    src/utility.cpp
    src/vector.cpp
    src/matrix.cpp
    src/point.cpp
    src/ray.cpp
    src/irisplusplus.cpp
    src/spectrum.cpp
    src/phong.cpp
    src/simplephysxrender.cpp)

target_link_libraries(iris-test 
    iris 
    irisadvanced
    iriscamera
    irisspectrum
    irisphysx
    irisadvancedtoolkit
    iriscameratoolkit
    irisphysxtoolkit
    irisplusplus
    irisadvancedplusplus
    irisspectrumplusplus
    irisphysxplusplus
    irisphysxtoolkitplusplus)